assets/src/styles/blocks.scss
// P4 Blocks
@import "blocks/Articles";
@import "blocks/Columns";
@import "blocks/Counter";
@import "blocks/File";
@import "blocks/Happypoint";
@import "blocks/Media";
@import "blocks/SocialMediaCards";
@import "blocks/SplitTwoColumns";
@import "blocks/Submenu";
@import "blocks/Cookies";

@import "blocks/TakeActionBoxout/style";

// EN Blocks
@import "blocks/ENForm/components/enform";
@import "blocks/ENForm/components/enform-full-width-bg";
@import "blocks/ENForm/components/enform-full-width";
@import "blocks/ENForm/components/enform-side-style";
// Campaigns - mixins
@import "blocks/ENForm/campaigns/mixins";
// Campaigns - themes
@import "blocks/ENForm/campaigns/campaign_enform";

// Native Blocks
@import "blocks/core-overrides/Image";
@import "blocks/core-overrides/BlockSpacing";
@import "blocks/core-overrides/Separator";
@import "blocks/core-overrides/Table";
@import "blocks/core-overrides/media-text";

// Other
@import "blocks/WideBlocks";
@import "blocks/Editor";

.is-style-small-padding {
  padding: 8px;
}

.is-style-medium-padding {
  padding: 16px;
}

.is-style-large-padding {
  padding: 32px;
}

.is-style-space-evenly {
  & > * {
    flex-basis: 0;
    flex-grow: 1;
    align-self: stretch;
  }
}

.is-style-roboto-font-family {
  font-family: $roboto;
}

